--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h4>கடைசில இத கண்டுபிடிச்சிடோம்
             ஆப்ராகா.. டாப்ரா...
         </h4>
-        <img src="images/lamp.png" alt="lamp" class='lamp'/>
+        <a href="https://smarthood.github.io/gunie.com/"><img src="images/lamp.png" alt="lamp" class='lamp'/></a>
         <img src="./images/alladin.png" alt="gunie" class='gunie'/>
         <img src="./images/tresure.png" alt="tresure" class='tresure'/>
     </div>
