--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h4>Atlast we found this Magic lamp...I think you had to touch that lamp
+        <h4>Touch the lamp...To tell your wish !
         </h4>
         <a href="https://smarthood.github.io/gunie/"><img src="images/lamp.png" alt="lamp" class='lamp'/></a>
         <img src="./images/alladin.png" alt="gunie" class='gunie'/>
